--- a/homework/Day_006_hw.ipynb
+++ b/homework/Day_006_hw.ipynb
@@ -4,31 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "假設有一個直徑長為 1 的圓形，要使用蒙地卡羅方法計算其面積，我們隨機塞入 N 個點到上面的正方形當中，有些點會落在圓形內而有些點會在圓形外，算出落在圓形內點的數目就可以得到圓形的面積。\n",
-    "\n",
-    "假設半徑為 $r$，圓形面積的計算公式為 $$\\pi r^2=\\pi\\times0.5^2=\\frac{\\pi}{4}$$\n",
-    "\n",
-    "並以此得到 $$\\pi=4\\times面積=4\\times\\frac{落在圓內的點}{所有的點}$$"
+    "BMI 計算公式： $$BMI=\\frac{體重}{身高^2}$$ 其中體重的單位為公斤，身高的單位為公尺。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "BMI (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "radius = 0.5"
+    "# 定義函式，並在函式中計算 BMI\n",
+    "function BMI(kg, height)\n",
+    "    return /(kg,height^2)\n",
+    "end"
    ]
   },
   {
@@ -37,76 +36,35 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "100000"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My BMI is: 21.604938271604937\n"
+     ]
     }
    ],
    "source": [
-    "n = 100000"
+    "println(\"My BMI is: \", BMI(70,1.8))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "30.470914127423825"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "count = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i = 1:n\n",
-    "    x = rand()\n",
-    "    y = rand()\n",
-    "\n",
-    "    dist = sqrt((x-radius)^2+(y-radius)^2)\n",
-    "    \n",
-    "    if dist <= radius\n",
-    "        count += 1\n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.14224"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pi_estimate = 4*count/n"
+    "Trump_BMI = BMI(110, 1.9)"
    ]
   },
   {
