--- a/homework/Day_009_hw.ipynb
+++ b/homework/Day_009_hw.ipynb
@@ -43,23 +43,22 @@
     }
    ],
    "source": [
-    "k = 100000\n",
-    "x = rand(200:500, k)"
+    "x = rand(200:500, 100000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.018156 seconds (74.39 k allocations: 4.672 MiB)\n",
-      "  0.041851 seconds (138.01 k allocations: 7.785 MiB, 13.23% gc time)\n",
-      "  0.026488 seconds (98.70 k allocations: 5.900 MiB)\n",
-      "  0.005252 seconds (25.04 k allocations: 2.131 MiB)\n"
+      "  0.000441 seconds (3 allocations: 783.828 KiB)\n",
+      "  0.000369 seconds (3 allocations: 783.828 KiB)\n",
+      "  0.000364 seconds (5 allocations: 783.859 KiB)\n",
+      "  0.000305 seconds (3 allocations: 783.828 KiB)\n"
      ]
     },
     {
@@ -94,7 +93,7 @@
        " 500"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +101,7 @@
    "source": [
     "@time sort(x, alg=InsertionSort)  #Insertion Sort\n",
     "@time sort(x, alg=MergeSort)  #MergeSort\n",
-    "@time sort(x; alg=PartialQuickSort(10000))  #Partial Quick Sort\n",
+    "@time sort(x; alg=PartialQuickSort(50))  #Partial Quick Sort\n",
     "@time sort(x; alg=QuickSort)  #QuickSort"
    ]
   },
