--- a/homework/Day_010_hw.ipynb
+++ b/homework/Day_010_hw.ipynb
@@ -8,33 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "100000-element Array{Int64,1}:\n",
-       " 233\n",
-       " 435\n",
-       " 212\n",
-       " 299\n",
-       " 221\n",
-       " 329\n",
-       " 237\n",
-       " 422\n",
-       " 412\n",
-       " 493\n",
-       " 487\n",
-       " 409\n",
-       " 475\n",
-       "   ⋮\n",
-       " 310\n",
-       " 226\n",
-       " 267\n",
-       " 210\n",
-       " 372\n",
-       " 248\n",
-       " 270\n",
-       " 222\n",
-       " 342\n",
-       " 291\n",
-       " 343\n",
-       " 450"
+       "\"永和有永和路，中和也有永和路，\\n中和有中和路，永和也有中和路；\\n中和的中和路有接永和的中和路，\\n永和的永和路沒接中和的永和路；\\n永和的中和路有接永和的永和路，\\n中和的永和路沒接中和的中和路。\""
       ]
      },
      "execution_count": 1,
@@ -43,80 +17,62 @@
     }
    ],
    "source": [
-    "x = rand(200:500, 100000)"
+    "str = \"永和有永和路，中和也有永和路，\n",
+    "中和有中和路，永和也有中和路；\n",
+    "中和的中和路有接永和的中和路，\n",
+    "永和的永和路沒接中和的永和路；\n",
+    "永和的中和路有接永和的永和路，\n",
+    "中和的永和路沒接中和的中和路。\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = Dict{String, Int64}()\n",
+    "for i in str\n",
+    "    if haskey(d, string(i))\n",
+    "        d[string(i)] += 1\n",
+    "    else\n",
+    "        d[string(i)] = 1\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0.000441 seconds (3 allocations: 783.828 KiB)\n",
-      "  0.000369 seconds (3 allocations: 783.828 KiB)\n",
-      "  0.000364 seconds (5 allocations: 783.859 KiB)\n",
-      "  0.000305 seconds (3 allocations: 783.828 KiB)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "100000-element Array{Int64,1}:\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       " 200\n",
-       "   ⋮\n",
-       " 500\n",
-       " 500\n",
-       " 500\n",
-       " 500\n",
-       " 500\n",
-       " 500\n",
-       " 500\n",
-       " 500\n",
-       " 500\n",
-       " 500\n",
-       " 500\n",
-       " 500"
+       "Dict{String,Int64} with 13 entries:\n",
+       "  \"接\"  => 4\n",
+       "  \"也\"  => 2\n",
+       "  \"和\"  => 24\n",
+       "  \"，\"  => 5\n",
+       "  \"沒\"  => 2\n",
+       "  \"永\"  => 12\n",
+       "  \"的\"  => 8\n",
+       "  \"中\"  => 12\n",
+       "  \"路\"  => 12\n",
+       "  \"；\"  => 2\n",
+       "  \"。\"  => 1\n",
+       "  \"有\"  => 6\n",
+       "  \"\\n\" => 5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "@time sort(x, alg=InsertionSort)  #Insertion Sort\n",
-    "@time sort(x, alg=MergeSort)  #MergeSort\n",
-    "@time sort(x; alg=PartialQuickSort(50))  #Partial Quick Sort\n",
-    "@time sort(x; alg=QuickSort)  #QuickSort"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "請問哪一種排序方法的效能最好？"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ans: QuickSort"
+    "d\n",
+    "    "
    ]
   },
   {
