--- a/homework/Day_013_hw.ipynb
+++ b/homework/Day_013_hw.ipynb
@@ -117,6 +117,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Array{Float64,2}:\n",
+       "  6.16814   5.55257   3.08385  1.68947\n",
+       " 12.0547   11.3252    9.61474  4.87297\n",
+       " 11.7438   10.7351    5.18129  2.573\n",
+       " 17.5756   16.1849   11.8252   5.59935"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W = Matrix(rand(4,3))\n",
+    "X = Matrix(rand(0:10,3,4))\n",
+    "W*X.+b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
